Fix header alignment on desktop AND added content gutters to index pages
Also fixed spacing on desktop

--- a/_sass/jekyll-theme-peaceful-gates/_menu.scss
+++ b/_sass/jekyll-theme-peaceful-gates/_menu.scss
@@ -1,7 +1,3 @@
-.main-container {
-    margin: $spacing-3;
-}
-
 .menu {
     padding: $spacing-2 $spacing-2;
 
